--- a/app/index.html
+++ b/app/index.html
@@ -51,23 +51,24 @@
                 </ul>
             </nav>
             <div class="user-nav">
-                <a class="user-nav__link" href="#">
+                <a class="user-nav__link user-nav__link--search" href="#">
                     <img class="user-nav__link-img" src="images/icons/search.svg"
                          alt="search icon">
                 </a>
-                <div class="user-nav__group__btn">
-                    <a class="user-nav__link" href="#">
+                <div class="user-nav__group-btn">
+                    <a class="user-nav__link user-nav__link--group" href="#">
                         <img class="user-nav__link-img" src="images/icons/heart.svg"
                              alt="heart icon">
-                        <span class="user-nav_num">0</span>
+                        <span class="user-nav__num">0</span>
                     </a>
-                    <a class="user-nav__link" href="#">
+                    <span class="user-nav__test"></span>
+                    <a class="user-nav__link user-nav__link--group" href="#">
                         <img class="user-nav__link-img" src="images/icons/cart.svg"
                              alt="cart icon">
-                        <span class="user-nav_num">0</span>
+                        <span class="user-nav__num">0</span>
                     </a>
                 </div>
-                <a class="user-nav__link" href="#">
+                <a class="user-nav__link user-nav__link--ellipse" href="#">
                     <img class="user-nav__link-img" src="images/icons/ellipse.svg"
                          alt="ellipse icon">
                 </a>
