--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <header class="header">
-    <div class="container">
+    <div class="big-container">
         <div class="header__inner">
             <a class="logo" href="#">
                 <img class="logo__img" src="images/logo.png" alt="logo">
@@ -76,6 +76,134 @@
         </div>
     </div>
 </header>
+
+<main class="main"></main>
+
+<footer class="footer">
+    <div class="container">
+        <div class="footer-top">
+            <div class="footer-top__inner">
+                <div class="footer-top__item footer-top__contacts">
+                    <a class="logo footer-top__logo" href="#">
+                        <img class="logo__img" src="images/logo.png" alt="logo">
+                    </a>
+                    <a class="footer-top__address" href="#">
+                        ADDRESS: 4772 Wines Lane Houston, TX 77032
+                    </a>
+                    <a class="footer-top__phone" href="tel:+8323475843">
+                        TELEPHONE: +832-347-5843
+                    </a>
+                    <a class="footer-top__email" href="#">
+                        EMAIL: contact@Glee.com
+                    </a>
+                </div>
+                <div class="footer-top__item footer-top__nav">
+                    <h6 class="footer-top__title">
+                        Services
+                    </h6>
+                    <ul class="footer-top__list">
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">
+                                About us
+                            </a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">
+                                Return Policy
+                            </a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">
+                                Our Blog
+                            </a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">
+                                Contact Us
+                            </a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">
+                                Terms & Condition
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-top__item footer-top__nav">
+                    <h6 class="footer-top__title">
+                        Account
+                    </h6>
+                    <ul class="footer-top__list">
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">
+                                Your Account
+                            </a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">
+                                Checkout
+                            </a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">
+                                Login
+                            </a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">
+                                Register
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-top__item footer-top__subscribe">
+                    <h6 class="footer-top__title">
+                        Newsletter
+                    </h6>
+                    <p class="footer-top__text">
+                        Subscribe by our newsletter and get
+                        update protidin.
+                    </p>
+                    <form class="footer-top__form" action="#">
+                        <input class="footer-top__input" type="text"
+                               placeholder="Email address" required>
+                        <button class="footer-top__btn" type="submit">
+                            Subscribe
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="footer-bottom__copy">
+                ©2020 CopyRight Example. All rights reserved.
+            </div>
+            <ul class="footer-bottom__list">
+                <li class="footer-bottom__item">
+                    <a class="footer-bottom__link" href="#">
+                        Home
+                    </a>
+                </li>
+                <li class="footer-bottom__item">
+                    <a class="footer-bottom__link" href="#">
+                        About
+                    </a>
+                </li>
+                <li class="footer-bottom__item">
+                    <a class="footer-bottom__link" href="#">
+                        Blog
+                    </a>
+                </li>
+                <li class="footer-bottom__item">
+                    <a class="footer-bottom__link" href="#">
+                        Contact
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</footer>
+
 <script src="js/index.min.js"></script>
 </body>
 </html>
