--- a/app/page.html
+++ b/app/page.html
@@ -77,84 +77,7 @@
     </div>
 </header>
 
-<main class="main">
-
-    <section class="top-slider">
-        <div class="big-container top-slider__container">
-            <div class="top-slider__circle"></div>
-            <div class="container">
-                <div class="top-slider__inner">
-                    <div class="top-slider__item">
-                        <div class="top-slider__content">
-                            <h3 class="top-slider__title">
-                                SMART AND TRENDY
-                            </h3>
-                            <p class="top-slider__text">
-                                Dolor sit amet, consectetur adipisicing elit, sed do
-                                eiusmod
-                                tempor
-                                incididunt
-                            </p>
-                            <a class="top-slider__link" href="#">
-                                Shop Now
-                                <img class="top-slider__arrow-right"
-                                     src="images/slider/arrow-right.svg"
-                                     alt="arrow right button">
-                            </a>
-                        </div>
-                        <img class="top-slider__img" src="images/slider/photo.png"
-                             alt="photo slider">
-                    </div>
-                    <div class="top-slider__item">
-                        <div class="top-slider__content">
-                            <h3 class="top-slider__title">
-                                SMART AND <br>
-                                TRENDY
-                            </h3>
-                            <p class="top-slider__text">
-                                Dolor sit amet, consectetur adipisicing elit, sed do
-                                eiusmod
-                                tempor
-                                incididunt
-                            </p>
-                            <a class="top-slider__link" href="#">
-                                Shop Now
-                                <img class="top-slider__arrow-right"
-                                     src="images/slider/arrow-right.svg"
-                                     alt="arrow right button">
-                            </a>
-                        </div>
-                        <img class="top-slider__img" src="images/slider/photo.png"
-                             alt="photo slider">
-                    </div>
-                    <div class="top-slider__item">
-                        <div class="top-slider__content">
-                            <h3 class="top-slider__title">
-                                SMART AND <br>
-                                TRENDY
-                            </h3>
-                            <p class="top-slider__text">
-                                Dolor sit amet, consectetur adipisicing elit, sed do
-                                eiusmod
-                                tempor
-                                incididunt
-                            </p>
-                            <a class="top-slider__link" href="#">
-                                Shop Now
-                                <img class="top-slider__arrow-right"
-                                     src="images/slider/arrow-right.svg"
-                                     alt="arrow right button">
-                            </a>
-                        </div>
-                        <img class="top-slider__img" src="images/slider/photo.png"
-                             alt="photo slider">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-</main>
+<main class="main"></main>
 
 <footer class="footer">
     <div class="container">
