added design and video block

--- a/app/index.html
+++ b/app/index.html
@@ -217,20 +217,20 @@
                 <h2 class="title week-products__title">
                     Products of the week
                 </h2>
-                <div class="week-products__filter">
-                    <button class="week-products__btn week-products__btn--active">
+                <div class="filter">
+                    <button class="filter__btn filter__btn--active">
                         All
                     </button>
-                    <button class="week-products__btn">
+                    <button class=" filter__btn">
                         Furnitures
                     </button>
-                    <button class="week-products__btn">
+                    <button class=" filter__btn">
                         Chairs
                     </button>
-                    <button class="week-products__btn">
+                    <button class=" filter__btn">
                         Lighting
                     </button>
-                    <button class="week-products__btn">
+                    <button class=" filter__btn">
                         Decor
                     </button>
                 </div>
@@ -607,6 +607,85 @@
             </div>
         </div>
     </div>
+
+    <section class="design">
+        <div class="container">
+            <div class="design__inner">
+                <h2 class="title design__title">New Design</h2>
+                <div class="filter">
+                    <button class="filter__btn filter__btn--active">
+                        All
+                    </button>
+                    <button class=" filter__btn">
+                        Furnitures
+                    </button>
+                    <button class=" filter__btn">
+                        Chairs
+                    </button>
+                    <button class=" filter__btn">
+                        Lighting
+                    </button>
+                    <button class=" filter__btn">
+                        Decor
+                    </button>
+                </div>
+            </div>
+            <div class="design__items">
+                <div class="design__item"
+                     style="background-image:url('images/product/design/1.jpg')">
+                    <h4 class="design__item-title">Beat Flat Pendant Black</h4>
+                    <div class="design__item-style">classic</div>
+                </div>
+
+                <div class="design__item"
+                     style="background-image: url('images/product/design/2.jpg')">
+                    <h4 class="design__item-title">Lampe Sur Pieds Bamboo</h4>
+                    <div class="design__item-style">classic</div>
+                </div>
+
+                <div class="design__item"
+                     style="background-image:url('images/product/design/3.png')">
+                    <h4 class="design__item-title">Rattan Rocking Chair</h4>
+                    <div class="design__item-style">classic</div>
+
+                </div>
+
+                <div class="design__item"
+                     style="background-image:url('images/product/design/4.jpg')">
+                    <h4 class="design__item-title">Rattan Rocking Chair</h4>
+                    <div class="design__item-style">classic</div>
+
+                </div>
+
+                <div class="design__item"
+                     style="background-image: url('images/product/design/5.png')">
+                    <h4 class="design__item-title">Rattan Rocking Chair</h4>
+                    <div class="design__item-style">classic</div>
+
+                </div>
+
+                <div class="design__item"
+                     style="background-image: url('images/product/design/6.jpg')">
+                    <h4 class="design__item-title">Lampe Sur Pieds Bamboo</h4>
+                    <div class="design__item-style">classic</div>
+                </div>
+
+            </div>
+        </div>
+        <div class="design-video">
+            <a class="design-video__play"
+               href="https://www.youtube.com/watch?v=8P7x9hYRM5w"
+               data-fancybox
+               data-preload="false"
+               data-width="640"
+               data-height="480">
+                <img class="design-video__img"
+                     src="images/icons/play.svg"
+                     alt="video play icon">
+            </a>
+        </div>
+    </section>
+
 </main>
 
 <footer class="footer">
