--- a/app/index.html
+++ b/app/index.html
@@ -686,6 +686,131 @@
         </div>
     </section>
 
+    <section class="blog">
+        <div class="container">
+            <div class="blog__inner">
+                <h2 class="blog__title title">Our Insights & Articles</h2>
+                <a class="blog__link" href="#">
+                    View All
+                    <img class="blog__img" src="images/icons/arrow-right.svg"
+                         alt="arrow-right icon">
+                </a>
+            </div>
+            <div class="blog__items">
+                <div class="blog__item">
+                    <a class="blog__item-imgLink" href="#">
+                        <img class="blog__item-img" src="images/product/blog/1.jpg"
+                             alt="blog image 1">
+                    </a>
+                    <div class="blog__item-wrapper">
+                        <h4 class="blog__item-title">
+                            <a class="blog__item-titleLink" href="#">
+                                Diusmod tempor incididunt ut labore et dolore magna
+                                aliqua. Ut
+                                enim ad minim veniam
+                            </a>
+                        </h4>
+                        <div class="blog__item-box">
+                            <div class="blog__item-date">
+                                <a class="blog__item-dateLink" href="#">
+                                    ✉ 28 JANUARY, 2020
+                                </a>
+                            </div>
+                            <div class="blog__item-author">
+                                <a class="blog__item-authorLink" href="#">
+                                    ✉ BY ADMIN
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="blog__item">
+                    <a class="blog__item-imgLink" href="#">
+                        <img class="blog__item-img" src="images/product/blog/2.jpg"
+                             alt="blog image 1">
+                    </a>
+                    <div class="blog__item-wrapper">
+                        <h4 class="blog__item-title">
+                            <a class="blog__item-titleLink" href="#">
+                                Aonsectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt
+                                ut
+                                labore et dolore
+                            </a>
+                        </h4>
+                        <div class="blog__item-box">
+                            <div class="blog__item-date">
+                                <a class="blog__item-dateLink" href="#">
+                                    ✉ 28 JANUARY, 2020
+                                </a>
+                            </div>
+                            <div class="blog__item-author">
+                                <a class="blog__item-authorLink" href="#">
+                                    ✉ BY ADMIN
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="blog__item">
+                    <a class="blog__item-imgLink" href="#">
+                        <img class="blog__item-img" src="images/product/blog/3.jpg"
+                             alt="blog image 1">
+                    </a>
+                    <div class="blog__item-wrapper">
+                        <h4 class="blog__item-title">
+                            <a class="blog__item-titleLink" href="#">
+                                Rncididunt ut labore et dolore magna aliqua. Ut enim
+                            </a>
+                        </h4>
+                        <div class="blog__item-box">
+                            <div class="blog__item-date">
+                                <a class="blog__item-dateLink" href="#">
+                                    ✉ 28 JANUARY, 2020
+                                </a>
+                            </div>
+                            <div class="blog__item-author">
+                                <a class="blog__item-authorLink" href="#">
+                                    ✉ BY ADMIN
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="partners">
+            <div class="container">
+                <ul class="partners__list">
+                    <li class="partners__item">
+                        <img class="partners__img" src="images/icons/partners/1.png"
+                             alt="Peterson logo">
+                    </li>
+                    <li class="partners__item">
+                        <img class="partners__img" src="images/icons/partners/2.png"
+                             alt="KMN CONSULTING logo">
+                    </li>
+                    <li class="partners__item">
+                        <img class="partners__img" src="images/icons/partners/3.png"
+                             alt="CHAINFORCE logo">
+                    </li>
+                    <li class="partners__item">
+                        <img class="partners__img" src="images/icons/partners/4.png"
+                             alt="NEXTG3N logo">
+                    </li>
+                    <li class="partners__item">
+                        <img class="partners__img" src="images/icons/partners/5.png"
+                             alt="VINTAGE logo">
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </section>
+
 </main>
 
 <footer class="footer">
