--- a/app/register-page.html
+++ b/app/register-page.html
@@ -80,12 +80,12 @@
 <main class="main">
 
     <section class="top">
-        <h2 class="top__title">Log in</h2>
+        <h2 class="top__title">Register</h2>
         <div class="breadcrumbs">
             <ul class="breadcrumbs__list">
                 <li class="breadcrumbs__item">
                     <a class="breadcrumbs__link" href="#">Home</a>
-                    <a class="breadcrumbs__link" href="#">Log in</a>
+                    <a class="breadcrumbs__link" href="#">Register</a>
             </ul>
         </div>
     </section>
@@ -101,20 +101,15 @@
                 <input class="modal__input" type="password" required
                        autocomplete="new-password">
             </label>
-            <button class="modal__button" type="submit">Login</button>
-            <div class="modal__box">
-                <label class="modal__label">
-                    <input class="modal__checkbox" type="checkbox" checked>
-                    <span class="checkmark">Remember me</span>
-                </label>
-                <a href="#" class="modal__lostPasswordLink">Lost your password?</a>
-            </div>
-            <a class="modal__registerLink" href="#">
-                Not registered? No problem
-            </a>
-            <a class="modal__createLink" href="#">
-                Create an account
-            </a>
+            <p class="modal__text">
+                A password will be sent to your email address.
+            </p>
+            <p class="modal__text">
+                Your personal data will be used to support your experience throughout this
+                website, to manage access to your account, and for other purposes
+                described in our privacy policy.
+            </p>
+            <button class="modal__button" type="submit">Register</button>
         </form>
     </section>
 
