--- a/app/register.html
+++ b/app/register.html
@@ -113,7 +113,7 @@
         </form>
     </section>
 
-    <section class="partners partners--login-page">
+    <section class="partners partners--modal">
         <div class="container">
             <ul class="partners__list">
                 <li class="partners__item">
@@ -138,7 +138,6 @@
                 </li>
             </ul>
         </div>
-        </se>
     </section>
 
 </main>
