--- a/app/about.html
+++ b/app/about.html
@@ -178,7 +178,126 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
 
+    <section class="team">
+        <div class="container">
+            <div class="team__inner">
+                <div class="team__content">
+                    <h3 class="title team__title">Our Team</h3>
+                    <p class="team__text">
+                        Lorem ipsum dolor sit amet, conse ctetur adipi sicing elit, sed do
+                        eiusmod tempor inciLorem ipsum dolor sit amet, consectetur
+                        adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat.
+                    </p>
+                    <a class="team__link" href="#">
+                        Join With US
+                        <img src="images/icons/arrow-right-about.svg"
+                             alt="arrow right icon">
+                    </a>
+                </div>
+                <div class="team__items">
+                    <div class="team__item">
+                        <img class="team__item-img" src="images/product/team/1.jpg"
+                             alt="team img">
+                        <div class="team__item-box">
+                            <div class="team__item-top">
+                                <h4 class="team__item-title">Eliza Elliot</h4>
+                                <p class="team__item-subtitle">Commodo tempor </p>
+                            </div>
+                            <div class="team__item-bottom">
+                                <a class="team__item-link" href="#">
+                                    <img class="team__item-icon"
+                                         src="images/icons/instagram.svg"
+                                         alt="instagram icon"
+                                    >
+                                </a>
+                                <a class="team__item-link" href="#">
+                                    <img class="team__item-icon"
+                                         src="images/icons/google+.svg" alt="google+ icon"
+                                    >
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="team__item">
+                        <img class="team__item-img" src="images/product/team/2.jpg"
+                             alt="team img">
+                        <div class="team__item-box">
+                            <div class="team__item-top">
+                                <h4 class="team__item-title">Roscoe A. </h4>
+                                <p class="team__item-subtitle">Commodo tempor </p>
+                            </div>
+                            <div class="team__item-bottom">
+                                <a class="team__item-link" href="#">
+                                    <img class="team__item-icon"
+                                         src="images/icons/instagram.svg"
+                                         alt="instagram icon"
+                                    >
+                                </a>
+                                <a class="team__item-link" href="#">
+                                    <img class="team__item-icon"
+                                         src="images/icons/google+.svg" alt="google+ icon"
+                                    >
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="team__item">
+                        <img class="team__item-img" src="images/product/team/3.jpg"
+                             alt="team img">
+                        <div class="team__item-box">
+                            <div class="team__item-top">
+                                <h4 class="team__item-title">Ruby M. </h4>
+                                <p class="team__item-subtitle">Commodo tempor </p>
+                            </div>
+                            <div class="team__item-bottom">
+                                <a class="team__item-link" href="#">
+                                    <img class="team__item-icon"
+                                         src="images/icons/instagram.svg"
+                                         alt="instagram icon"
+                                    >
+                                </a>
+                                <a class="team__item-link" href="#">
+                                    <img class="team__item-icon"
+                                         src="images/icons/google+.svg" alt="google+ icon"
+                                    >
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="team__item">
+                        <img class="team__item-img" src="images/product/team/4.jpg"
+                             alt="team img">
+                        <div class="team__item-box">
+                            <div class="team__item-top">
+                                <h4 class="team__item-title">Marie F. Bloss</h4>
+                                <p class="team__item-subtitle">Commodo tempor </p>
+                            </div>
+                            <div class="team__item-bottom">
+                                <a class="team__item-link" href="#">
+                                    <img class="team__item-icon"
+                                         src="images/icons/instagram.svg"
+                                         alt="instagram icon"
+                                    >
+                                </a>
+                                <a class="team__item-link" href="#">
+                                    <img class="team__item-icon"
+                                         src="images/icons/google+.svg" alt="google+ icon"
+                                    >
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
