--- a/app/terms.html
+++ b/app/terms.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="scss/style.scss"/>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -80,226 +81,85 @@
 <main class="main">
 
     <section class="top">
-        <h2 class="top__title">About Us</h2>
+        <h2 class="top__title">Terms & Conditions</h2>
         <div class="breadcrumbs">
             <ul class="breadcrumbs__list">
                 <li class="breadcrumbs__item">
                     <a class="breadcrumbs__link" href="#">Home</a>
-                    <a class="breadcrumbs__link" href="#">About Us</a>
+                    <a class="breadcrumbs__link" href="#">Terms & Conditions</a>
             </ul>
         </div>
     </section>
 
-    <section class="about">
-        <div class="about__content">
-            <div class="container">
-                <div class="about__inner">
-                    <img class="about__img" src="images/about.jpg" alt="about photo">
-                    <div class="about__box">
-                        <div class="about__numbers">
-                            <div class="about__number-count">
-                                12
-                            </div>
-                            <div class="about__number-descr">
-                                <div>Years</div>
-                                <div>Experience</div>
-                                <div>Working</div>
-                            </div>
-                        </div>
-                        <h4 class="about__title title about__title--page">Mission of our
-                            creative house</h4>
-                        <p class="about__text">
-                            consectetur adipisicing elit, sed do eiusmod tempor incididunt
+
+    <section class="terms">
+        <div class="container">
+            <div class="terms__inner">
+
+                <div class="terms__item">
+                    <h5 class="terms__item-title">
+                        Types of Personal Information We Collect
+                    </h5>
+                    <ol class="terms__lists">
+                        <li class="terms__list">
+                            Consectetur adipisicing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                             quis nostrud exercitation ullamco laboris nisi ut aliquip ex
                             ea commodo consequat. Duis aute irure dolor in reprehenderit
-                            in voluptate velit esse cillum
-                        </p>
-                        <div class="about__items">
-
-                            <div class="about__item">
-                                <img class="about__item-img" src="images/icons/note.svg"
-                                     alt="1">
-                                <div class="about__item-box">
-                                    <h5 class="about__item-count">520+</h5>
-                                    <div class="about__item-title">Projects</div>
-                                </div>
-                            </div>
-
-                            <div class="about__item">
-                                <img class="about__item-img"
-                                     src="images/icons/mouthpiece.svg"
-                                     alt="1">
-                                <div class="about__item-box">
-                                    <h5 class="about__item-count">$4M</h5>
-                                    <div class="about__item-title">Revenue</div>
-                                </div>
-                            </div>
-
-                            <div class="about__item">
-                                <img class="about__item-img" src="images/icons/medal.svg"
-                                     alt="1">
-                                <div class="about__item-box">
-                                    <h5 class="about__item-count">250</h5>
-                                    <div class="about__item-title">Awards</div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
+                            in voluptate velit esse cillum dolore
+                        </li>
+                        <li class="terms__list">
+                            Consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                            ea commodo consequat. Duis aute irure dolor in reprehenderit
+                            in voluptate velit esse cillum dolore
+                        </li>
+                        <li class="terms__list">
+                            Consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            ut labore et dolore magna aliqua.
+                        </li>
+                        <li class="terms__list">
+                            Dagna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat.
+                        </li>
+                        <li class="terms__list">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                            do eiusmod
+                        </li>
+                    </ol>
                 </div>
-            </div>
-        </div>
-        <div class="about-info">
-            <div class="container">
-                <div class="about-info__items">
-                    <div class="about-info__item">
-                        <img class="about-info__img" src="images/icons/about/progress.svg"
-                             alt="progress icon">
-                        <h5 class="about-info__title">99%</h5>
-                        <p class="about-info__subtitle">Satisﬁed Clients Rate</p>
-                    </div>
-                    <div class="about-info__item">
-                        <img class="about-info__img" src="images/icons/about/delivery.svg"
-                             alt="delivery icon">
-                        <div class="about-info__title">5020+</div>
-                        <p class="about-info__subtitle">Products Delivered</p>
-                    </div>
-                    <div class="about-info__item">
-                        <img class="about-info__img" src="images/icons/about/support.svg"
-                             alt="support icon">
-                        <h5 class="about-info__title">23hr</h5>
-                        <p class="about-info__subtitle">Daily Working Time</p>
-                    </div>
-                    <div class="about-info__item">
-                        <img class="about-info__img" src="images/icons/about/brands.svg"
-                             alt="brands icon">
-                        <h5 class="about-info__title">140+</h5>
-                        <p class="about-info__subtitle">Brands in Store</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
-    <section class="team">
-        <div class="container">
-            <div class="team__inner">
-                <div class="team__content">
-                    <h3 class="title team__title about__title--page">Our Team</h3>
-                    <p class="team__text">
-                        Lorem ipsum dolor sit amet, conse ctetur adipi sicing elit, sed do
-                        eiusmod tempor inciLorem ipsum dolor sit amet, consectetur
-                        adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                        exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat.
+                <div class="terms__item">
+                    <h5 class="terms__item-title">
+                        How marketpmss.com Collects Personal Infonnation
+                    </h5>
+                    <p class="terms__item-text">
+                        consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate
+                        velit esse cillum dolore
                     </p>
-                    <a class="team__link" href="#">
-                        Join With US
-                        <img src="images/icons/arrow-right-about.svg"
-                             alt="arrow right icon">
-                    </a>
                 </div>
-                <div class="team__items">
-                    <div class="team__item">
-                        <img class="team__item-img" src="images/product/team/1.jpg"
-                             alt="team img">
-                        <div class="team__item-box">
-                            <div class="team__item-top">
-                                <h4 class="team__item-title">Eliza Elliot</h4>
-                                <p class="team__item-subtitle">Commodo tempor </p>
-                            </div>
-                            <div class="team__item-bottom">
-                                <a class="team__item-link" href="#">
-                                    <img class="team__item-icon"
-                                         src="images/icons/instagram.svg"
-                                         alt="instagram icon"
-                                    >
-                                </a>
-                                <a class="team__item-link" href="#">
-                                    <img class="team__item-icon"
-                                         src="images/icons/google+.svg" alt="google+ icon"
-                                    >
-                                </a>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="team__item">
-                        <img class="team__item-img" src="images/product/team/2.jpg"
-                             alt="team img">
-                        <div class="team__item-box">
-                            <div class="team__item-top">
-                                <h4 class="team__item-title">Roscoe A. </h4>
-                                <p class="team__item-subtitle">Commodo tempor </p>
-                            </div>
-                            <div class="team__item-bottom">
-                                <a class="team__item-link" href="#">
-                                    <img class="team__item-icon"
-                                         src="images/icons/instagram.svg"
-                                         alt="instagram icon"
-                                    >
-                                </a>
-                                <a class="team__item-link" href="#">
-                                    <img class="team__item-icon"
-                                         src="images/icons/google+.svg" alt="google+ icon"
-                                    >
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="team__item">
-                        <img class="team__item-img" src="images/product/team/3.jpg"
-                             alt="team img">
-                        <div class="team__item-box">
-                            <div class="team__item-top">
-                                <h4 class="team__item-title">Ruby M. </h4>
-                                <p class="team__item-subtitle">Commodo tempor </p>
-                            </div>
-                            <div class="team__item-bottom">
-                                <a class="team__item-link" href="#">
-                                    <img class="team__item-icon"
-                                         src="images/icons/instagram.svg"
-                                         alt="instagram icon"
-                                    >
-                                </a>
-                                <a class="team__item-link" href="#">
-                                    <img class="team__item-icon"
-                                         src="images/icons/google+.svg" alt="google+ icon"
-                                    >
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="team__item">
-                        <img class="team__item-img" src="images/product/team/4.jpg"
-                             alt="team img">
-                        <div class="team__item-box">
-                            <div class="team__item-top">
-                                <h4 class="team__item-title">Marie F. Bloss</h4>
-                                <p class="team__item-subtitle">Commodo tempor </p>
-                            </div>
-                            <div class="team__item-bottom">
-                                <a class="team__item-link" href="#">
-                                    <img class="team__item-icon"
-                                         src="images/icons/instagram.svg"
-                                         alt="instagram icon"
-                                    >
-                                </a>
-                                <a class="team__item-link" href="#">
-                                    <img class="team__item-icon"
-                                         src="images/icons/google+.svg" alt="google+ icon"
-                                    >
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+                <div class="terms__item">
+                    <h5 class="terms__item-title">
+                        How marketprosscom Uses Personal Information
+                    </h5>
+                    <p class="terms__item-text">
+                        consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate
+                        velit esse cillum dolore
+                    </p>
                 </div>
+
             </div>
         </div>
+
     </section>
 
     <section class="blog">
