added template page

--- a/app/page.html
+++ b/app/page.html
@@ -77,7 +77,47 @@
     </div>
 </header>
 
-<main class="main"></main>
+<main class="main">
+
+    <section class="top">
+        <h2 class="top__title">Register</h2>
+        <div class="breadcrumbs">
+            <ul class="breadcrumbs__list">
+                <li class="breadcrumbs__item">
+                    <a class="breadcrumbs__link" href="#">Home</a>
+                    <a class="breadcrumbs__link" href="#">Register</a>
+            </ul>
+        </div>
+    </section>
+
+    <section class="partners partners--modal">
+        <div class="container">
+            <ul class="partners__list">
+                <li class="partners__item">
+                    <img class="partners__img" src="images/icons/partners/1.png"
+                         alt="Peterson logo">
+                </li>
+                <li class="partners__item">
+                    <img class="partners__img" src="images/icons/partners/2.png"
+                         alt="KMN CONSULTING logo">
+                </li>
+                <li class="partners__item">
+                    <img class="partners__img" src="images/icons/partners/3.png"
+                         alt="CHAINFORCE logo">
+                </li>
+                <li class="partners__item">
+                    <img class="partners__img" src="images/icons/partners/4.png"
+                         alt="NEXTG3N logo">
+                </li>
+                <li class="partners__item">
+                    <img class="partners__img" src="images/icons/partners/5.png"
+                         alt="VINTAGE logo">
+                </li>
+            </ul>
+        </div>
+    </section>
+
+</main>
 
 <footer class="footer">
     <div class="container">
