--- a/app/index.html
+++ b/app/index.html
@@ -217,20 +217,20 @@
                 <h2 class="title week-products__title">
                     Products of the week
                 </h2>
-                <div class="filter">
-                    <button class="filter__btn filter__btn--active">
+                <div class="filter-btns">
+                    <button class="filter-btns__btn filter-btns__btn--active">
                         All
                     </button>
-                    <button class=" filter__btn">
+                    <button class=" filter-btns__btn">
                         Furnitures
                     </button>
-                    <button class=" filter__btn">
+                    <button class=" filter-btns__btn">
                         Chairs
                     </button>
-                    <button class=" filter__btn">
+                    <button class=" filter-btns__btn">
                         Lighting
                     </button>
-                    <button class=" filter__btn">
+                    <button class=" filter-btns__btn">
                         Decor
                     </button>
                 </div>
