added filter price

--- a/app/product-list1.html
+++ b/app/product-list1.html
@@ -154,10 +154,30 @@
                     </form>
                 </div>
 
-                <div class="catalog__content">
-
+                <div class="filter__item filter-price">
+                    <h3 class="filter__title filter-price__title">Price</h3>
+                    <form class="filter-price__form" action="#">
+                        <input class="filter-price__input"
+                               type="text"
+                               name="filter-price"
+                               data-type="double"
+                               data-min="0"
+                               data-max="500"
+                               data-from="100"
+                               data-to="300"
+                        >
+                        <label class="filter-price__box">
+                            <span class="filter-price__from"></span>
+                            <span class="filter-price__to"></span>
+                        </label>
+                    </form>
                 </div>
             </div>
+
+            <div class="catalog__content">
+
+            </div>
+        </div>
 
     </section>
 
