added filter brand

--- a/app/product-list1.html
+++ b/app/product-list1.html
@@ -166,13 +166,60 @@
                                data-from="100"
                                data-to="300"
                         >
-                        <label class="filter-price__box">
+                        <label class="filter-price__label">
                             <span class="filter-price__from"></span>
                             <span class="filter-price__to"></span>
                         </label>
                     </form>
                 </div>
+
+                <div class="filter__item filter-brand">
+                    <h3 class="filter__title">Brand</h3>
+                    <form class="filter-brand__form" action="#">
+
+                        <label class="filter-brand__label">
+                            <input class="filter-brand__input" type="checkbox" checked>
+                            <span class="filter-brand__checkbox">
+                            <span>RFL</span>
+                            <span>(10)</span>
+                        </span>
+                        </label>
+
+                        <label class="filter-brand__label">
+                            <input class="filter-brand__input" type="checkbox">
+                            <span class="filter-brand__checkbox">
+                            <span>Brothers</span>
+                            <span>(21)</span>
+                        </span>
+                        </label>
+
+                        <label class="filter-brand__label">
+                            <input class="filter-brand__input" type="checkbox">
+                            <span class="filter-brand__checkbox">
+                            <span>Regal</span>
+                            <span>(3)</span>
+                        </span>
+                        </label>
+
+                        <label class="filter-brand__label">
+                            <input class="filter-brand__input" type="checkbox">
+                            <span class="filter-brand__checkbox">
+                            <span>Nadia</span>
+                            <span>(14)</span>
+                        </span>
+                        </label>
+
+                        <label class="filter-brand__label">
+                            <input class="filter-brand__input" type="checkbox">
+                            <span class="filter-brand__checkbox">
+                            <span>Otobi</span>
+                            <span>(6)</span>
+                        </span>
+                        </label>
+                    </form>
+                </div>
             </div>
+
 
             <div class="catalog__content">
 
