added filter recent products

--- a/app/product-list1.html
+++ b/app/product-list1.html
@@ -218,6 +218,64 @@
                         </label>
                     </form>
                 </div>
+
+                <div class="filter__item filter-recent-products">
+                    <h3 class="filter__title">RECENT PRODUCTS</h3>
+                    <div class="filter-recent-products__items">
+
+                        <a class="filter-recent-products__item" href="#">
+                            <div class="filter-recent-products__link">
+                                <img class="filter-recent-products__img"
+                                     src="images/product/recent-products/1.png"
+                                     alt="recent product image">
+                            </div>
+                            <div class="filter-recent-products__box">
+                                <div class="filter-recent-products__title-link">
+                                    <h4 class="filter-recent-products__title">
+                                        Pendant lamp
+                                    </h4>
+                                </div>
+                                <div class="stars" data-rateyo-rating="4"></div>
+                                <div class="filter-recent-products__price">23$</div>
+                            </div>
+                        </a>
+
+                        <a class="filter-recent-products__item" href="#">
+                            <div class="filter-recent-products__link">
+                                <img class="filter-recent-products__img"
+                                     src="images/product/recent-products/2.png"
+                                     alt="recent product image">
+                            </div>
+                            <div class="filter-recent-products__box">
+                                <div class="filter-recent-products__title-link">
+                                    <h4 class="filter-recent-products__title">
+                                        Pendant lamp
+                                    </h4>
+                                </div>
+                                <div class="stars" data-rateyo-rating="4"></div>
+                                <div class="filter-recent-products__price">23$</div>
+                            </div>
+                        </a>
+
+                        <a class="filter-recent-products__item" href="#">
+                            <div class="filter-recent-products__link">
+                                <img class="filter-recent-products__img"
+                                     src="images/product/recent-products/3.png"
+                                     alt="recent product image">
+                            </div>
+                            <div class="filter-recent-products__box">
+                                <div class="filter-recent-products__title-link">
+                                    <h4 class="filter-recent-products__title">
+                                        Pendant lamp
+                                    </h4>
+                                </div>
+                                <div class="stars" data-rateyo-rating="4"></div>
+                                <div class="filter-recent-products__price">23$</div>
+                            </div>
+                        </a>
+
+                    </div>
+                </div>
             </div>
 
 
