added product details info

--- a/app/product.html
+++ b/app/product.html
@@ -177,9 +177,34 @@
                         </div>
                     </div>
                 </div>
+                <div class="product-details__info">
+                    <div class="product-details__btns">
+                        <button type="button" class="product-details__btn">
+                            Description
+                        </button>
+                        <button type="button" class="product-details__btn">
+                            Additional information
+                        </button>
+                        <button type="button" class="product-details__btn">
+                            Reviews
+                            <span>(2)</span>
+                        </button>
+                    </div>
+                    <p class="product-details__text">
+                        consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                        enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
+
+
 
 
     <section class="partners partners--modal">
