--- a/app/product.html
+++ b/app/product.html
@@ -179,7 +179,8 @@
                 </div>
                 <div class="product-details__info">
                     <div class="product-details__btns">
-                        <button type="button" class="product-details__btn">
+                        <button type="button"
+                                class="product-details__btn product-details__btn--active">
                             Description
                         </button>
                         <button type="button" class="product-details__btn">
