--- a/app/contact.html
+++ b/app/contact.html
@@ -202,9 +202,15 @@
                     </div>
                     <button class="contact__btn" type="submit">Send Message</button>
                 </form>
-                <img class="contact__map" src="images/map.jpg" alt="map contact">
-            </div>
 
+                <div style="width: 100%">
+                    <iframe width="500" height="353" frameborder="0" scrolling="no"
+                            marginheight="0" marginwidth="0"
+                            src="https://maps.google.com/maps?width=500&amp;height=353&amp;hl=en&amp;q=%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD,%20%D0%A2%D0%B5%D1%85%D0%B0%D1%81,%20%D0%A1%D0%A8%D0%90+(My%20Business%20Name)&amp;t=p&amp;z=9&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+                        <a href="https://www.maps.ie/distance-area-calculator.html">distance
+                            maps</a></iframe>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -462,7 +468,6 @@
         </div>
     </div>
 </footer>
-
 <script src="js/index.min.js"></script>
 </body>
 </html>
